--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -5,6 +5,41 @@
         <title>Presentation</title>
     </head>
     <body>
-        
+        <h1>Presentation</h1>
+        <p>Jag heter Rasmus Eneman och är 19år. Jag har läst El Automation på Nyköpingsgymnasium.</p>
+        <h2>Min familj</h2>
+        <dl>
+            <dt>Erik</dt>
+            <dd>Far</dd>
+            <dt>Pernilla</dt>
+            <dd>Mor</dd>
+            <dt>Felicia</dt>
+            <dd>Syster</dd>
+        </dl>
+        <p>
+            <h3>Programmeringspråk jag använt</h3>
+            <!-- En massa listor! -->
+            <ul>
+                <li>Webb
+                    <ol>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>PHP</li>
+                    </ol>
+                </li>
+                <li>Skrivbord
+                    <ol>
+                        <li>Java</li>
+                        <li>Python</li>
+                    </ol>
+                </li>
+                <li>Skript
+                    <ol>
+                        <li>BASH</li>
+                    </ol>
+                </li>
+            </ul>
+        </p>
     </body>
 </html>
