Add multiple paragraphs

--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <h1>Presentation</h1>
-        <p>Jag heter Rasmus Eneman och är 19år. Jag har läst El Automation på Nyköpingsgymnasium.</p>
+        <p>Jag heter Rasmus Eneman och är 19år. Jag har tidigare bott i Nyköping.</p>
+        <p>Jag har läst El Automation på Nyköpingsgymnasium, men tyckte att programmering var roligare och sökte därför Webbprogrammerare.</p>
         <h2>Min familj</h2>
         <dl>
             <dt>Erik</dt>
