Add answers to 1.4

--- a/index.html
+++ b/index.html
@@ -12,4 +12,19 @@
         <p>Skrivet av Rasmus, 2013-09-09</p>
         <p>Ansvarig för materialet på denna sida är Rasmus Eneman</p>
     </body>
+    <!-- Uppgift 1.4
+    
+    1.4.1
+        /html/pages/bottom.html
+    1.4.2
+        pages/top.html
+    1.4.3
+        ../../index.html
+    1.4.4
+        /index.html
+    1.4.5
+        ./bottom.html eller bara bottom.html
+    1.4.6
+        html/pages/top.html
+    -->
 </html>
