Add navigation menu

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     </head>
     <body>
         <h1>Rasmus Enemans site</h1>
+        
+        <ul>
+            <li><a href="#">Start</a></li>
+            <li><a href="pages/laborations.html">Laborationer</a></li>
+            <li><a href="pages/presentation.html">Presentation</a></li>
+            <li><a href="pages/contact.html">Kontakt</a></li>
+        </ul>
+        
         <h2>Kursblogg</h2>
         <h3>Hejsan världen!</h3>
         <p>På denna blogg kommer jag att skriva några rader om de laborationer jag gör och också publicera material som jag producerar.</p>
