--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,5 +6,12 @@
     </head>
     <body>
         <h1>Kontakt</h1>
+        
+        <ul>
+            <li><a href="../index.html">Start</a></li>
+            <li><a href="laborations.html">Laborationer</a></li>
+            <li><a href="presentation.html">Presentation</a></li>
+            <li><a href="#">Kontakt</a></li>
+        </ul>
     </body>
 </html>
