--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -6,6 +6,14 @@
     </head>
     <body>
         <h1>Presentation</h1>
+        
+        <ul>
+            <li><a href="../index.html">Start</a></li>
+            <li><a href="laborations.html">Laborationer</a></li>
+            <li><a href="#">Presentation</a></li>
+            <li><a href="contact.html">Kontakt</a></li>
+        </ul>
+        
         <p>Jag heter Rasmus Eneman och är 19år. Jag har tidigare bott i Nyköping.</p>
         <p>Jag har läst El Automation på Nyköpingsgymnasium, men tyckte att programmering var roligare och sökte därför Webbprogrammerare.</p>
         <h2>Min familj</h2>
