--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -6,5 +6,12 @@
     </head>
     <body>
         <h1>Laborationer</h1>
+        
+        <ul>
+            <li><a href="../index.html">Start</a></li>
+            <li><a href="#">Laborationer</a></li>
+            <li><a href="presentation.html">Presentation</a></li>
+            <li><a href="contact.html">Kontakt</a></li>
+        </ul>
     </body>
 </html>
