--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Rasmus Enemans site</h1>
+        <p>Välkommen hit!</p>
         
         <ul>
             <li><a href="#">Start</a></li>
