--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Laborationer</h1>
+        <p>Rasmus Enemans site</p>
         
         <ul>
             <li><a href="../index.html">Start</a></li>
