--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -14,5 +14,39 @@
             <li><a href="presentation.html">Presentation</a></li>
             <li><a href="contact.html">Kontakt</a></li>
         </ul>
+        
+        <h2>Webbteknisk introduktion</h2>
+        <ul>
+            <li>Laboration 1</li>
+        </ul>
+        
+        <h3>Laboration 1</h3>
+        Uppgifter:
+        <ol>
+            <li>Utvecklingsmiljön [Check]</li>
+            <li><a href="presentation.html">Ett första dokument</a></li>
+            <li><a href="../index.html">Startsidan</a></li>
+            <li>Absoluta/Relativa sökvägar
+                <dl>
+                    <dt>1.4.1. Vilken är den absoluta sökvägen till filen bottom.html?</dt>
+                    <dd>/html/pages/bottom.html</dd>
+                    <dt>1.4.2. Vilken är den relativa sökvägen från filen default.html till filen top.html?</dt>
+                    <dd>pages/top.html</dd>
+                    <dt>1.4.3. Vilken är den relativa sökvägen från filen bottom.html till filen index.html?</dt>
+                    <dd>../../index.html</dd>
+                    <dt>1.4.4. Vilken är den absoluta sökvägen till filen index.html?</dt>
+                    <dd>/index.html</dd>
+                    <dt>1.4.5. Vilken är den relativa sökvägen från filen top.html till bottom.html?</dt>
+                    <dd>./bottom.html eller bara bottom.html</dd>
+                    <dt>1.4.6. Vilken är den relativa sökvägen från filen index.html till top.html?</dt>
+                    <dd>html/pages/top.html</dd>
+                </dl>
+            </li>
+            <li>Länkar och mer listor</li>
+            <li>Bilder</li>
+            <li>Video</li>
+            <li>Tabeller</li>
+            <li>Formulär</li>
+        </ol>
     </body>
 </html>
