--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -17,10 +17,10 @@
         
         <h2>Webbteknisk introduktion</h2>
         <ul>
-            <li>Laboration 1</li>
+            <li><a href="#lab-1">Laboration 1</a></li>
         </ul>
         
-        <h3>Laboration 1</h3>
+        <a name="lab-1" /><h3>Laboration 1</h3>
         Uppgifter:
         <ol>
             <li>Utvecklingsmiljön [Check]</li>
