--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -34,13 +34,13 @@
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>Javascript</li>
-                    <li>PHP</li>
+                    <li><a href="http://php.net/">PHP</a></li>
                 </ol>
             </li>
             <li>Skrivbord
                 <ol>
-                    <li>Java</li>
-                    <li>Python</li>
+                    <li><a href="http://www.java.com/">Java</a></li>
+                    <li><a href="http://www.python.org/">Python</a></li>
                 </ol>
             </li>
             <li>Skript
