Add presentation picture

--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -42,8 +42,12 @@
                     <dd>html/pages/top.html</dd>
                 </dl>
             </li>
-            <li>Länkar och mer listor</li>
-            <li>Bilder</li>
+            <li>Länkar och mer listor [Check]</li>
+            <li>Bilder
+                <ul>
+                    <li><a href="presentation.html#bird">Presentation, jpeg</a></li>
+                </ul>
+            </li>
             <li>Video</li>
             <li>Tabeller</li>
             <li>Formulär</li>
