--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -49,5 +49,7 @@
                 </ol>
             </li>
         </ul>
+        <a name="bird" />
+        <img src="../pics/bird.jpg" />
     </body>
 </html>
