--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -46,6 +46,7 @@
             <li>Bilder
                 <ul>
                     <li><a href="presentation.html#bird">Presentation, jpeg</a></li>
+                    <li><a href="../pics/res.png">Startsidan, png</a></li>
                 </ul>
             </li>
             <li>Video</li>
