--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Rasmus site</title>
     </head>
     <body>
+        <img src="pics/res.png" />
         <h1>Rasmus Enemans site</h1>
         <p>Välkommen hit!</p>
         
