Add vector image, blogg post

--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -47,6 +47,7 @@
                 <ul>
                     <li><a href="presentation.html#bird">Presentation, jpeg</a></li>
                     <li><a href="../pics/res.png">Startsidan, png</a></li>
+                    <li><a href="../index.html#2">Blogginlägg: Laborationssidan, svg</a></li>
                 </ul>
             </li>
             <li>Video</li>
