--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         </ul>
         
         <h2>Kursblogg</h2>
+        <a name="2" />
+        <h3>Laborationssidan, svg</h3>
+        <p>En SVG bild som skapades till uppgiften 1.6</p>
+        <img src="pics/vector.svg" />
+        <p>Skrivet av Rasmus, 2013-09-15</p>
+        <a name="1" />
         <h3>Hejsan världen!</h3>
         <p>På denna blogg kommer jag att skriva några rader om de laborationer jag gör och också publicera material som jag producerar.</p>
         <p>Skrivet av Rasmus, 2013-09-09</p>
