--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         </ul>
         
         <h2>Kursblogg</h2>
+        <a name="3" />
+        <h3>Video-taggen</h3>
+        <p>Testar att envända video-taggen genom att visa en trailer från <a href="http://www.bigbuckbunny.org/">Big Buck Bunny</a></p>
+        <video width="720" height="400">
+            <source src="videos/bbb.ogg" type="video/ogg">
+        </video>
+        <p>Skrivet av Rasmus, 2013-09-15</p>
         <a name="2" />
         <h3>Laborationssidan, svg</h3>
         <p>En SVG bild som skapades till uppgiften 1.6</p>
