--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -50,7 +50,7 @@
                     <li><a href="../index.html#2">Blogginlägg: Laborationssidan, svg</a></li>
                 </ul>
             </li>
-            <li>Video</li>
+            <li><a href="../index.html#3">Video</a></li>
             <li>Tabeller</li>
             <li>Formulär</li>
         </ol>
