--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a name="3" />
         <h3>Video-taggen</h3>
         <p>Testar att envända video-taggen genom att visa en trailer från <a href="http://www.bigbuckbunny.org/">Big Buck Bunny</a></p>
-        <video width="720" height="400">
+        <video width="720" height="400" controls="controls">
             <source src="videos/bbb.ogg" type="video/ogg">
         </video>
         <p>Skrivet av Rasmus, 2013-09-15</p>
