Add result table

--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -20,10 +20,70 @@
             <li><a href="#lab-1">Laboration 1</a></li>
         </ul>
         
+        <h3>Resultat</h3>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Laboration</th>
+                    <th>Uppgift</th>
+                    <th>Status</th>
+                    <th>Redovisad</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td rowspan="8">1</td>
+                    <td>1</td>
+                    <td>Färdig</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Färdig</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Färdig</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Färdig</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Färdig</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>Färdig</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>Arbetar</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Ej påbörjad</td>
+                    <td></td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="4">Laborationsresultat gällande Rasmus Eneman</td>
+                </tr>
+            </tfoot>
+        </table>
+        
         <a name="lab-1" /><h3>Laboration 1</h3>
         Uppgifter:
         <ol>
-            <li>Utvecklingsmiljön [Check]</li>
+            <li>Utvecklingsmiljön</li>
             <li><a href="presentation.html">Ett första dokument</a></li>
             <li><a href="../index.html">Startsidan</a></li>
             <li>Absoluta/Relativa sökvägar
@@ -42,7 +102,7 @@
                     <dd>html/pages/top.html</dd>
                 </dl>
             </li>
-            <li>Länkar och mer listor [Check]</li>
+            <li>Länkar och mer listor</li>
             <li>Bilder
                 <ul>
                     <li><a href="presentation.html#bird">Presentation, jpeg</a></li>
