--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,5 +14,39 @@
             <li><a href="presentation.html">Presentation</a></li>
             <li><a href="#">Kontakt</a></li>
         </ul>
+        
+        <form method="post" action="http://voyager.lnu.se/tekinet/kurser/dtt/wp_webbintro/form.php">
+            <fieldset>
+                <legend>Fråga</legend>
+                <label for="select">Ärendetyp</label>
+                <select name="select" id="select">
+                    <option value="q">Fråga</option>
+                    <option value="b">Bugg</option>
+                </select>
+                <br />
+                <label for="subject">Rubrik</label>
+                <input type="text" name="subject" id="subject" />
+                <br />
+                <label for="message">Meddelande</label>
+                <textarea name="message" id="message"></textarea>
+            </fieldset>
+            <fieldset>
+                <legend>Hur ska jag kontakta dig?</legend>
+                <label for="contact-email">Via mejl</label>
+                <input type="radio" name="contact" id="contact-email" value="email" />
+                <br />
+                <label for="contact-phone">Via telefon</label>
+                <input type="radio" name="contact" id="contact-phone" value="phone" />
+            </fieldset>
+            <input type="submit" name="submit" value="Skicka" />
+        </form>
     </body>
 </html>
+<!--
+* Metoden som ska användas är post
+* Ett textfält finns
+* En grupp med radioknappar eller kryssrutor används
+* En dropdownlista finns
+* En submit-knapp finns
+* Fieldsets och tillhörande legend ska användas för att strukturera upp formuläret.
+-->
