Update the results table

--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -64,12 +64,12 @@
                 </tr>
                 <tr>
                     <td>7</td>
-                    <td>Arbetar</td>
+                    <td>Färdig</td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>8</td>
-                    <td>Ej påbörjad</td>
+                    <td>Färdig</td>
                     <td></td>
                 </tr>
             </tbody>
