Make anchorlink-targets validate

--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -80,7 +80,7 @@
             </tfoot>
         </table>
         
-        <a name="lab-1" /><h3>Laboration 1</h3>
+        <a id="lab-1"></a><h3>Laboration 1</h3>
         Uppgifter:
         <ol>
             <li>Utvecklingsmiljön</li>
