--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -49,7 +49,7 @@
                 </ol>
             </li>
         </ul>
-        <a name="bird" />
+        <a id="bird"></a>
         <img src="../pics/bird.jpg" />
     </body>
 </html>
