Add alt text to images so they validate

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Rasmus site</title>
     </head>
     <body>
-        <img src="pics/res.png" />
+        <img src="pics/res.png" alt="logo" />
         <h1>Rasmus Enemans site</h1>
         <p>Välkommen hit!</p>
         
@@ -27,7 +27,7 @@
         <a id="2"></a>
         <h3>Laborationssidan, svg</h3>
         <p>En SVG bild som skapades till uppgiften 1.6</p>
-        <img src="pics/vector.svg" />
+        <img src="pics/vector.svg" alt="simple vector image" />
         <p>Skrivet av Rasmus, 2013-09-15</p>
         <a id="1"></a>
         <h3>Hejsan världen!</h3>
