--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -50,6 +50,6 @@
             </li>
         </ul>
         <a id="bird"></a>
-        <img src="../pics/bird.jpg" />
+        <img src="../pics/bird.jpg" alt="A picture of a bird" />
     </body>
 </html>
