--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Rasmus site</title>
+        <link rel="stylesheet" type="text/css" href="css/reset.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
         <img src="pics/res.png" alt="logo" />
