--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Laborationer</title>
+        <link rel="stylesheet" type="text/css" href="../css/reset.css">
+        <link rel="stylesheet" type="text/css" href="../css/main.css">
     </head>
     <body>
         <h1>Laborationer</h1>
