Fix container id

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
-        <div id="content">
+        <div id="container">
             <div id="header">
                 <img src="pics/res.png" alt="logo" />
                 <h1>Rasmus Enemans site</h1>
