--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="../css/main.css">
     </head>
     <body>
-        <div id="content">
+        <div id="container">
             <div id="header">
                 <h1>Kontakt</h1>
                 <p>Rasmus Enemans site</p>
