Add footer on all pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,6 +49,10 @@
                     <input type="submit" name="submit" value="Skicka" />
                 </form>
             </div>
+            
+            <div id="footer">
+                <p>Ansvarig för materialet på denna sida är Rasmus Eneman</p>
+            </div>
         </div>
     </body>
 </html>
