--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -123,6 +123,10 @@
                     <li>Formulär</li>
                 </ol>
             </div>
+            
+            <div id="footer">
+                <p>Ansvarig för materialet på denna sida är Rasmus Eneman</p>
+            </div>
         </div>
     </body>
 </html>
