--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -60,6 +60,10 @@
                 <a id="bird"></a>
                 <img src="../pics/bird.jpg" alt="A picture of a bird" />
             </div>
+            
+            <div id="footer">
+                <p>Ansvarig för materialet på denna sida är Rasmus Eneman</p>
+            </div>
         </div>
     </body>
 </html>
