Add active class for menu options

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             
             <div id="navigation">
                 <ul>
-                    <li><a href="#">Start</a></li>
+                    <li><a href="#" class="active">Start</a></li>
                     <li><a href="pages/laborations.html">Laborationer</a></li>
                     <li><a href="pages/presentation.html">Presentation</a></li>
                     <li><a href="pages/contact.html">Kontakt</a></li>
