--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@
                     <li><a href="../index.html">Start</a></li>
                     <li><a href="laborations.html">Laborationer</a></li>
                     <li><a href="presentation.html">Presentation</a></li>
-                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="#" class="active">Kontakt</a></li>
                 </ul>
             </div>
             
