--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="../index.html">Start</a></li>
                     <li><a href="laborations.html">Laborationer</a></li>
-                    <li><a href="#">Presentation</a></li>
+                    <li><a href="#" class="active">Presentation</a></li>
                     <li><a href="contact.html">Kontakt</a></li>
                 </ul>
             </div>
