--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -16,7 +16,7 @@
             <div id="navigation">
                 <ul>
                     <li><a href="../index.html">Start</a></li>
-                    <li><a href="#">Laborationer</a></li>
+                    <li><a href="#" class="active">Laborationer</a></li>
                     <li><a href="presentation.html">Presentation</a></li>
                     <li><a href="contact.html">Kontakt</a></li>
                 </ul>
