Make header tagline h2

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div id="header">
                 <img src="pics/res.png" alt="logo" />
                 <h1>Rasmus Enemans site</h1>
-                <p>Välkommen hit!</p>
+                <h2>Välkommen hit!</h2>
             </div>
             
             <div id="navigation">
