--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -10,7 +10,7 @@
         <div id="container">
             <div id="header">
                 <h1>Presentation</h1>
-                <p>Rasmus Enemans site</p>
+                <h2>Rasmus Enemans site</h2>
             </div>
         
             <div id="navigation">
