Divide blogposts, fix anchorlinks

--- a/index.html
+++ b/index.html
@@ -24,23 +24,25 @@
             </div>
             
             <div id="content">
-                <h1>Kursblogg</h1>
-                <a id="3"></a>
-                <h2>Video-taggen</h2>
-                <p>Testar att envända video-taggen genom att visa en trailer från <a href="http://www.bigbuckbunny.org/">Big Buck Bunny</a></p>
-                <video width="720" height="400" controls="controls">
-                    <source src="videos/bbb.ogg" type="video/ogg">
-                </video>
-                <p>Skrivet av Rasmus, 2013-09-15</p>
-                <a id="2"></a>
-                <h2>Laborationssidan, svg</h2>
-                <p>En SVG bild som skapades till uppgiften 1.6</p>
-                <img src="pics/vector.svg" alt="simple vector image" />
-                <p>Skrivet av Rasmus, 2013-09-15</p>
-                <a id="1"></a>
-                <h2>Hejsan världen!</h2>
-                <p>På denna blogg kommer jag att skriva några rader om de laborationer jag gör och också publicera material som jag producerar.</p>
-                <p>Skrivet av Rasmus, 2013-09-09</p>
+                <div id="p3" class="blogg_post">
+                    <h1>Kursblogg</h1>
+                    <h2>Video-taggen</h2>
+                    <p>Testar att envända video-taggen genom att visa en trailer från <a href="http://www.bigbuckbunny.org/">Big Buck Bunny</a></p>
+                    <video width="720" height="400" controls="controls">
+                        <source src="videos/bbb.ogg" type="video/ogg">
+                    </video>
+                    <p>Skrivet av Rasmus, 2013-09-15</p>
+                <div id="p2" class="blogg_post">
+                    <h2>Laborationssidan, svg</h2>
+                    <p>En SVG bild som skapades till uppgiften 1.6</p>
+                    <img src="pics/vector.svg" alt="simple vector image" />
+                    <p>Skrivet av Rasmus, 2013-09-15</p>
+                </div>
+                <div id="p1" class="blogg_post">
+                    <h2>Hejsan världen!</h2>
+                    <p>På denna blogg kommer jag att skriva några rader om de laborationer jag gör och också publicera material som jag producerar.</p>
+                    <p>Skrivet av Rasmus, 2013-09-09</p>
+                </div>
             </div>
             
             <div id="footer">
