--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -115,10 +115,10 @@
                         <ul>
                             <li><a href="presentation.html#bird">Presentation, jpeg</a></li>
                             <li><a href="../pics/res.png">Startsidan, png</a></li>
-                            <li><a href="../index.html#2">Blogginlägg: Laborationssidan, svg</a></li>
+                            <li><a href="../index.html#p2">Blogginlägg: Laborationssidan, svg</a></li>
                         </ul>
                     </li>
-                    <li><a href="../index.html#3">Video</a></li>
+                    <li><a href="../index.html#p3">Video</a></li>
                     <li>Tabeller</li>
                     <li>Formulär</li>
                 </ol>
