Use video hosted on github

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <h2>Video-taggen</h2>
                     <p>Testar att envända video-taggen genom att visa en trailer från <a href="http://www.bigbuckbunny.org/">Big Buck Bunny</a></p>
                     <video width="720" height="400" controls="controls">
-                        <source src="videos/bbb.ogg" type="video/ogg">
+                        <source src="http://re222dv.github.io/1ik415-laborationer/videos/bbb.ogg" type="video/ogg">
                     </video>
                     <p>Skrivet av Rasmus, 2013-09-15</p>
                 <div id="p2" class="blogg_post">
