Add blog post and som post formatting rules

--- a/index.html
+++ b/index.html
@@ -24,6 +24,40 @@
             
             <div id="content">
                 <h1>Kursblogg</h1>
+                <div id="p4" class="blogg_post">
+                    <h2>Längre bloggpost</h2>
+                    <img src="pics/cactus.jpg" alt="Nätfoto på en kaktusblomma" class="right" />
+                    <p class="preamble">En lite längre bloggpost med flera stycken, ingress och bild.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ornare metus ut libero porttitor,
+                        ut fringilla massa eleifend. Donec commodo dui purus, id hendrerit tellus auctor ac. Donec et tellus
+                        turpis. Donec dapibus feugiat nisi eu luctus. Phasellus pretium dolor nunc, id condimentum est
+                        gravida sed. Donec tempus est quis mauris convallis lacinia. Morbi dictum erat sapien, dictum luctus
+                        nisl semper vel. Sed venenatis nulla urna, et consectetur justo varius auctor. Duis nunc lorem,
+                        convallis non lobortis nec, iaculis sit amet mi. Nullam vel congue leo. Curabitur at molestie justo.
+                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                        Vivamus consequat ullamcorper ipsum, vitae aliquam mi lobortis sed. Cras quis placerat orci, eget
+                        pulvinar sem.
+                    </p>
+                    <p>
+                        Sed semper semper arcu, ac adipiscing ante semper vel. Phasellus accumsan libero nec urna malesuada
+                        tempus. Cras condimentum accumsan orci, non pellentesque mauris tincidunt sit amet. Maecenas
+                        imperdiet eros risus, posuere pretium turpis tincidunt a. Aliquam posuere nibh eu sapien vehicula
+                        accumsan. Nullam dictum gravida faucibus. Pellentesque in laoreet turpis. Cum sociis natoque
+                        penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum et mauris sit amet
+                        sapien egestas pulvinar feugiat eget orci. Ut adipiscing interdum placerat. Integer elementum urna
+                        nibh, gravida laoreet magna vehicula non. Suspendisse accumsan, neque eget vestibulum vehicula,
+                        risus nisl suscipit mauris, at tempus odio nisi ac arcu. Curabitur et tellus in nunc blandit
+                        accumsan. Nam at dui imperdiet, malesuada dui et, ultrices turpis. Nam sit amet neque magna.
+                    </p>
+                    <p>
+                        Donec rutrum sit amet libero eget adipiscing. Proin in molestie nulla, nec aliquam ante. Sed
+                        ultrices enim enim, ac gravida diam suscipit nec. Nulla ac lectus est. Vivamus aliquam hendrerit
+                        sapien, eu feugiat eros convallis id. Vivamus quis augue adipiscing nibh adipiscing consequat.
+                        Etiam dictum quam vitae diam rhoncus ultrices.
+                    </p>
+                    <p class="post_footer">Skrivet av Rasmus, 2013-09-15</p>
+                </div>
                 <div id="p3" class="blogg_post">
                     <h2>Video-taggen</h2>
                     <p>Testar att envända video-taggen genom att visa en trailer från <a href="http://www.bigbuckbunny.org/">Big Buck Bunny</a></p>
