Add comments and fix spelling

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             
             <div id="content">
                 <h1>Kursblogg</h1>
-                <div id="p4" class="blogg_post">
+                <div id="p4" class="blog_post">
                     <h2>Längre bloggpost</h2>
                     <img src="pics/cactus.jpg" alt="Nätfoto på en kaktusblomma" class="right" />
                     <p class="preamble">En lite längre bloggpost med flera stycken, ingress och bild.</p>
@@ -58,7 +58,7 @@
                     </p>
                     <p class="post_footer">Skrivet av Rasmus, 2013-09-15</p>
                 </div>
-                <div id="p3" class="blogg_post">
+                <div id="p3" class="blog_post">
                     <h2>Video-taggen</h2>
                     <p>Testar att envända video-taggen genom att visa en trailer från <a href="http://www.bigbuckbunny.org/">Big Buck Bunny</a></p>
                     <video width="720" height="400" controls="controls">
@@ -66,13 +66,13 @@
                     </video>
                     <p class="post_footer">Skrivet av Rasmus, 2013-09-15</p>
                 </div>
-                <div id="p2" class="blogg_post">
+                <div id="p2" class="blog_post">
                     <h2>Laborationssidan, svg</h2>
                     <p>En SVG bild som skapades till uppgiften 1.6</p>
                     <img src="pics/vector.svg" alt="simple vector image" />
                     <p class="post_footer">Skrivet av Rasmus, 2013-09-15</p>
                 </div>
-                <div id="p1" class="blogg_post">
+                <div id="p1" class="blog_post">
                     <h2>Hejsan världen!</h2>
                     <p>På denna blogg kommer jag att skriva några rader om de laborationer jag gör och också publicera material som jag producerar.</p>
                     <p class="post_footer">Skrivet av Rasmus, 2013-09-09</p>
