--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Rasmus site</title>
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" media="print" href="css/print.css">
     </head>
     <body>
         <div id="container">
