--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -2,9 +2,10 @@
 <html lang="sv">
     <head>
         <meta charset="utf-8" />
-        <title>Laborationer</title>
-        <link rel="stylesheet" type="text/css" href="../css/reset.css">
-        <link rel="stylesheet" type="text/css" href="../css/main.css">
+        <title>Kontakt</title>
+        <link rel="stylesheet" type="text/css" href="../css/reset.css" />
+        <link rel="stylesheet" type="text/css" href="../css/main.css" />
+        <link rel="stylesheet" type="text/css" media="print" href="../css/print.css" />
     </head>
     <body>
         <div id="container">
