--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <title>Presentation</title>
-        <link rel="stylesheet" type="text/css" href="../css/reset.css">
-        <link rel="stylesheet" type="text/css" href="../css/main.css">
+        <link rel="stylesheet" type="text/css" href="../css/reset.css" />
+        <link rel="stylesheet" type="text/css" href="../css/main.css" />
+        <link rel="stylesheet" type="text/css" media="print" href="../css/print.css" />
     </head>
     <body>
         <div id="container">
