Add menu items images using sprite

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             
             <div id="navigation">
                 <ul>
-                    <li><a href="#" class="active">Start</a></li>
-                    <li><a href="pages/laborations.html">Laborationer</a></li>
-                    <li><a href="pages/presentation.html">Presentation</a></li>
-                    <li><a href="pages/contact.html">Kontakt</a></li>
+                    <li><a href="#" id="nav_start" class="active">Start</a></li>
+                    <li><a href="pages/laborations.html" id="nav_laborations">Laborationer</a></li>
+                    <li><a href="pages/presentation.html" id="nav_presentation">Presentation</a></li>
+                    <li><a href="pages/contact.html" id="nav_contact">Kontakt</a></li>
                 </ul>
             </div>
             
