--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,10 +16,10 @@
             
             <div id="navigation">
                 <ul>
-                    <li><a href="../index.html">Start</a></li>
-                    <li><a href="laborations.html">Laborationer</a></li>
-                    <li><a href="presentation.html">Presentation</a></li>
-                    <li><a href="#" class="active">Kontakt</a></li>
+                    <li><a href="../index.html" id="nav_start">Start</a></li>
+                    <li><a href="laborations.html" id="nav_laborations">Laborationer</a></li>
+                    <li><a href="presentation.html" id="nav_presentation">Presentation</a></li>
+                    <li><a href="#" id="nav_contact" class="active">Kontakt</a></li>
                 </ul>
             </div>
             
