--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -16,10 +16,10 @@
             
             <div id="navigation">
                 <ul>
-                    <li><a href="../index.html">Start</a></li>
-                    <li><a href="#" class="active">Laborationer</a></li>
-                    <li><a href="presentation.html">Presentation</a></li>
-                    <li><a href="contact.html">Kontakt</a></li>
+                    <li><a href="../index.html" id="nav_start">Start</a></li>
+                    <li><a href="#" id="nav_laborations" class="active">Laborationer</a></li>
+                    <li><a href="presentation.html" id="nav_presentation">Presentation</a></li>
+                    <li><a href="contact.html" id="nav_contact">Kontakt</a></li>
                 </ul>
             </div>
             
