--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -16,10 +16,10 @@
         
             <div id="navigation">
                 <ul>
-                    <li><a href="../index.html">Start</a></li>
-                    <li><a href="laborations.html">Laborationer</a></li>
-                    <li><a href="#" class="active">Presentation</a></li>
-                    <li><a href="contact.html">Kontakt</a></li>
+                    <li><a href="../index.html" id="nav_start">Start</a></li>
+                    <li><a href="laborations.html" id="nav_laborations">Laborationer</a></li>
+                    <li><a href="#" id="nav_presentation" class="active">Presentation</a></li>
+                    <li><a href="contact.html" id="nav_contact">Kontakt</a></li>
                 </ul>
             </div>
             
